; ModuleID = '/home/carl/AnghaBench/ish/fs/proc/extr_entry.c_proc_entry_getname.c'
source_filename = "/home/carl/AnghaBench/ish/fs/proc/extr_entry.c_proc_entry_getname.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.proc_entry = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64, i32 (%struct.proc_entry*, i8*)* }

@.str = private unnamed_addr constant [27 x i8] c"missing name in proc entry\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @proc_entry_getname(%struct.proc_entry* %0, i8* %1) #0 {
  %3 = alloca %struct.proc_entry*, align 8
  %4 = alloca i8*, align 8
  store %struct.proc_entry* %0, %struct.proc_entry** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.proc_entry*, %struct.proc_entry** %3, align 8
  %6 = getelementptr inbounds %struct.proc_entry, %struct.proc_entry* %5, i32 0, i32 0
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 1
  %9 = load i32 (%struct.proc_entry*, i8*)*, i32 (%struct.proc_entry*, i8*)** %8, align 8
  %10 = icmp ne i32 (%struct.proc_entry*, i8*)* %9, null
  br i1 %10, label %11, label %20

11:                                               ; preds = %2
  %12 = load %struct.proc_entry*, %struct.proc_entry** %3, align 8
  %13 = getelementptr inbounds %struct.proc_entry, %struct.proc_entry* %12, i32 0, i32 0
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 1
  %16 = load i32 (%struct.proc_entry*, i8*)*, i32 (%struct.proc_entry*, i8*)** %15, align 8
  %17 = load %struct.proc_entry*, %struct.proc_entry** %3, align 8
  %18 = load i8*, i8** %4, align 8
  %19 = call i32 %16(%struct.proc_entry* %17, i8* %18)
  br label %38

20:                                               ; preds = %2
  %21 = load %struct.proc_entry*, %struct.proc_entry** %3, align 8
  %22 = getelementptr inbounds %struct.proc_entry, %struct.proc_entry* %21, i32 0, i32 0
  %23 = load %struct.TYPE_2__*, %struct.TYPE_2__** %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %35

27:                                               ; preds = %20
  %28 = load i8*, i8** %4, align 8
  %29 = load %struct.proc_entry*, %struct.proc_entry** %3, align 8
  %30 = getelementptr inbounds %struct.proc_entry, %struct.proc_entry* %29, i32 0, i32 0
  %31 = load %struct.TYPE_2__*, %struct.TYPE_2__** %30, align 8
  %32 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %31, i32 0, i32 0
  %33 = load i64, i64* %32, align 8
  %34 = call i32 @strcpy(i8* %28, i64 %33)
  br label %37

35:                                               ; preds = %20
  %36 = call i32 @assert(i32 0)
  br label %37

37:                                               ; preds = %35, %27
  br label %38

38:                                               ; preds = %37, %11
  ret void
}

declare dso_local i32 @strcpy(i8*, i64) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
